--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,13 @@ cmake_minimum_required (VERSION 3.8)
 
 project ("NES Emulator")
 
-add_subdirectory("vendor/glfw")
+find_package(GLFW3)
+if(NOT ${GLFW3_FOUND})
+	add_subdirectory("vendor/glfw")
+
+	set(GLFW3_INCLUDE_DIRS "")
+	set(GLFW3_LIBRARIES glfw)
+endif()
 add_subdirectory("vendor/glad")
 add_subdirectory("vendor/spdlog")
 
