--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,7 +6,8 @@ cmake_minimum_required (VERSION 3.8)
 project ("NES Emulator")
 
 find_package(glfw3)
-if(NOT GLFW3_FOUND)
+if(GLFW3_FOUND)
+else()
 	add_subdirectory("vendor/glfw")
 endif()
 add_subdirectory("vendor/glad")
