final linux i hate linux i lionux

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,8 +6,7 @@ cmake_minimum_required (VERSION 3.8)
 project ("NES Emulator")
 
 find_package(glfw3)
-if(GLFW3_FOUND)
-else()
+if(NOT glfw3_FOUND)
 	add_subdirectory("vendor/glfw")
 endif()
 add_subdirectory("vendor/glad")
